# linuxUtils

./: CMakeLists.txt  README.md
src/include/: process.h
src/source/: process.cpp
